--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,189 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+*,
+html,
+a,
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+}
+
+.rails-link {
+  color: #fff;
+}
+
+a {
+  color: #434b54;
+}
+
+.rails-link a {
+  color: #fff;
+}
+
+body {
+  background-color: rgb(185, 185, 185);
+}
+
+main {
+  width: 100%;
+}
+
+.welcome h1 {
+  padding-top: 20%;
+}
+
+.logins {
+  padding-top: 20%;
+  width: 100%;
+}
+
+.logins a {
+  width: 100%;
+  font-weight: 600;
+}
+
+/* login */
+
+.login-nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #3778c2;
+  color: #fff;
+  padding: 10px;
+}
+
+.btn-login {
+  background-color: transparent;
+  border: none;
+}
+
+.login-fields {
+  display: flex;
+  flex-direction: column;
+  margin-top: 15px;
+}
+
+.email-width,
+.password-width {
+  width: 100%;
+  padding: 20px;
+  border: none;
+}
+
+.forgot-pwd {
+  text-align: center;
+}
+
+hr {
+  width: 100%;
+  margin: 0;
+  margin-left: 20px;
+  background-color: #434b54;
+  border: 2px solid #434b54;
+}
+
+.login-field {
+  background-color: #fff;
+}
+
+.category-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fff;
+  padding: 10px;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.75);
+}
+
+.category {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  margin: 10px;
+  background-color: #fff;
+  border-radius: 3px;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.75);
+}
+
+.category-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.fs {
+  font-size: 10px;
+}
+
+.transaction-page {
+  background-color: red;
+}
+
+.profile_img {
+  max-width: 100%;
+}
+
+.photo {
+  width: 70px;
+  border-radius: 4px;
+  display: grid;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10%;
+  gap: 20px;
+  padding-bottom: 20px;
+}
+
+.form-container .submit-button {
+  width: 175px;
+  background-color: #3778c2;
+  padding: 0.5em 1em;
+  color: white;
+  border: none;
+  font-size: 1.1em;
+  border-radius: 3px;
+}
+
+.form-container .submit-button:hover {
+  background-color: #5fb523;
+  cursor: pointer;
+  transition: 0.2s ease;
+}
+
+.form-container input[type="text"] {
+  padding: 0.5em 1em;
+  margin-bottom: 10px;
+}
+
+.new-t {
+  text-align: center;
+  font-size: 30px;
+}
+
+@media screen and (max-width: 768px) {
+  .welcome h1 {
+    padding-top: 20%;
+  }
+
+  .logins {
+    padding-top: 40%;
+    width: 100%;
+  }
+
+  .logins a {
+    padding-top: 20%;
+    width: 100%;
+    font-weight: 600;
+  }
+}
