--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -42,7 +42,7 @@ main {
   font-weight: 600;
 }
 
-/* login */
+/* Login */
 
 .login-nav {
   display: flex;
@@ -54,9 +54,16 @@ main {
   padding: 10px;
 }
 
+.btn-logout,
 .btn-login {
   background-color: transparent;
   border: none;
+}
+
+.btn-logout {
+  background-color: transparent;
+  border: none;
+  color: white;
 }
 
 .login-fields {
@@ -88,16 +95,6 @@ hr {
   background-color: #fff;
 }
 
-.category-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #fff;
-  padding: 10px;
-  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.75);
-}
-
 .category {
   display: flex;
   flex-direction: row;
@@ -121,8 +118,14 @@ hr {
   font-size: 10px;
 }
 
-.transaction-page {
-  background-color: red;
+.transaction-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fff;
+  padding: 10px;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.75);
 }
 
 .profile_img {
@@ -133,6 +136,14 @@ hr {
   width: 70px;
   border-radius: 4px;
   display: grid;
+}
+
+.cate-form input {
+  width: 100%;
+}
+
+.cate-back a {
+  color: #fff;
 }
 
 .form-container {
@@ -166,9 +177,36 @@ hr {
   margin-bottom: 10px;
 }
 
-.new-t {
-  text-align: center;
-  font-size: 30px;
+.footer_container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  color: white;
+  background-color: #3778c2;
+  width: 100%;
+  bottom: 0;
+  position: fixed;
+  cursor: pointer;
+  padding: 2px 10px 2px 10px;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  margin-top: 20px;
+  border: 1px solid white;
+  width: 100%;
+}
+
+.footer:hover {
+  background-color: #5fb523;
+}
+
+.footer a {
+  text-decoration: none;
+  color: #fff;
 }
 
 @media screen and (max-width: 768px) {
