--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
     <%= render "devise/shared/error_messages", resource: resource %>
     <div class="login-nav">
       <div><%= link_to "Back", users_path, class: "rails-link" %> </div>
-      <div class="fs-5">REGISTER</div>     
+      <div>REGISTER</div>     
       <div class=" actions" >
         <%= f.submit "Sign up", class: "btn-login rails-link" %>
       </div>
