--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,13 @@
 <main class="welcome">
   <p style="color: green"><%= notice %></p>
-  <div class="container">
     
-    <div class=" container-fluid d-flex flex-column justify-content-center align-items-center">
+  <div class=" welcome-content">
     <h1>Dazzle</h1>
-<div class="content d-flex flex-column text-center logins">
-        <p class="btn btn-primary"><%= link_to "Sign-Up", new_user_registration_path %></p>
-
-        <p><%= link_to "Log-in", new_user_session_path %></p>
-</div>
-    </div>
   </div>
+
+  <div class="welcome-content1 logins">
+    <p class="welcome-btn"><%= link_to "Sign-Up", new_user_registration_path %></p>
+    <p><%= link_to "Log-in", new_user_session_path %></p>
+  </div>
+
 </main>
