--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,13 +1,13 @@
 <main class="welcome">
   <p style="color: green"><%= notice %></p>
     
-  <div class=" welcome-content">
-    <h1>Dazzle</h1>
+  <div class="welcome-content">
+    <h1 class="dazzling">Dazzling</h1>
   </div>
 
   <div class="welcome-content1 logins">
-    <p class="welcome-btn"><%= link_to "Sign-Up", new_user_registration_path %></p>
-    <p><%= link_to "Log-in", new_user_session_path %></p>
+    <p class="welcome-btn"><%= link_to "LOG IN", new_user_session_path %></p>
+    <p><%= link_to "SIGN UP", new_user_registration_path %></p>   
   </div>
 
 </main>
