--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: 'CustomFont';
+  src: url('custom_font.woff2') format('woff2'),
+       url('custom_font.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 *,
 html,
 a,
@@ -21,13 +29,17 @@ a {
 }
 
 body {
-  background-color: rgb(185, 185, 185);
+  background-color: rgb(236, 234, 234);
+  font-family: Arial, sans-serif;
 }
 
 main {
   width: 100%;
 }
 
+.dazzling {
+  font-family: 'Lucida Sans', Verdana, sans-serif;
+}
 .welcome h1 {
   padding-top: 20%;
 }
@@ -44,6 +56,10 @@ main {
   align-self: center;
   justify-self: center;
   margin-top: 15rem;
+}
+
+.welcome-content h1 {
+
 }
 
 .welcome-content1 {
@@ -64,6 +80,11 @@ main {
   background-color: #3778c2;
   padding: 15px;
   margin-bottom: 10px;
+  color: #fff;
+}
+
+.welcome-btn a {
+  color: #fff;
 }
 
 .logins {
@@ -73,7 +94,7 @@ main {
 
 .logins a {
   width: 100%;
-  font-weight: 600;
+  /* font-weight: 600; */
 }
 
 /* Login */
@@ -85,13 +106,18 @@ main {
   align-items: center;
   background-color: #3778c2;
   color: #fff;
-  padding: 10px;
+  padding: 25px;
 }
 
 .btn-logout,
 .btn-login {
   background-color: transparent;
   border: none;
+  cursor: pointer;
+}
+
+.login-page-btn {
+  font-size: 17px;
 }
 
 .btn-logout {
@@ -129,6 +155,12 @@ hr {
   background-color: #fff;
 }
 
+.category-msg {
+  font-size: 20px;
+  padding: 30px;
+  color: #3778c2;
+}
+
 .category {
   display: flex;
   flex-direction: row;
@@ -147,8 +179,12 @@ hr {
   color: inherit;
   text-decoration: none;
   cursor: pointer;
+  font-size: 15px;
 }
 
+.transaction-cate {
+  padding: 25px;
+}
 .category-content {
   display: flex;
   flex-direction: row;
@@ -157,9 +193,14 @@ hr {
 }
 
 .fs {
-  font-size: 10px;
+  font-size: 12px;
 }
 
+.transaction-time {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
 .transaction-header {
   display: flex;
   flex-direction: row;
@@ -224,26 +265,28 @@ hr {
   flex-direction: row;
   justify-content: center;
   color: white;
-  background-color: #3778c2;
+  background-color: #5fb523;
   width: 100%;
   bottom: 0;
   position: fixed;
   cursor: pointer;
   padding: 2px 10px 2px 10px;
+
 }
 
 .footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10px;
-  margin-top: 20px;
+  padding: 15px;
+  margin: 15px 10px 15px 10px;
   border: 1px solid white;
   width: 100%;
 }
 
-.footer:hover {
-  background-color: #5fb523;
+.footer a:hover {
+  color: #3778c2;
+  font-weight: 700;
 }
 
 .footer a {
