--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,10 +4,10 @@
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
     <div class="login-nav">
-      <div><%= link_to "Back", users_path, class: "rails-link" %> </div>
+      <div><%= link_to "BACK", users_path, class: "rails-link" %> </div>
       <div>REGISTER</div>     
       <div class=" actions" >
-        <%= f.submit "Sign up", class: "btn-login rails-link" %>
+        <%= f.submit "Sign up", class: "btn-login rails-link login-page-btn" %>
       </div>
     </div>
 
@@ -37,6 +37,7 @@
 <% end %>
 </div>
 
+<br>
 <div class="forgot-pwd">
 <%= render "devise/shared/links" %>
 </div>
